tests/specs/ecosystem/bureaudouble/outils/0_0_9.test
bureaudouble/outils/0.0.9
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'Document'.
const getDocument: () => Document = {} as never;
                         ~~~~~~~~
    at file://<tmpdir>/convertToPlain.ts:1:26

TS2536 [ERROR]: Type '0' cannot be used to index type 'InferResult<T>'.
export type QueryFunction<V> = <T extends CompiledQuery<unknown>>(fn: (qb: Kysely<V>) => T) => Promise<InferResult<T>[0][]>;
                                                                                                       ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/database/sqlite/createQueryFunction.ts:7:104

Found 2 errors.

